Separate lists for both state types and more (still quite WIP)